--- a/wordz.html
+++ b/wordz.html
@@ -166,6 +166,50 @@
     .time{ color:var(--muted); }
     .chan{ color:var(--muted); }
     .sep{ color:var(--muted); }
+
+
+    /* ===== NPC user list + per-name glow (theme-safe) ===== */
+    :root{ --msgShadow: rgba(0,0,0,.35); }
+    html[data-theme="punk"]{ --msgShadow: rgba(255,255,255,.22); }
+    .msg span{ text-shadow: 0 1px 0 var(--msgShadow); } /* improves contrast on light themes */
+
+    .whoGlow{ text-shadow: 0 0 6px currentColor, 0 0 14px currentColor; }
+
+    .userList{
+      list-style:none;
+      margin:0;
+      padding:8px 10px;
+      display:flex;
+      flex-direction:column;
+      gap:6px;
+      max-height: 220px;
+      overflow:auto;
+      font-family: var(--mono);
+      font-size: 12px;
+    }
+    .userRow{
+      display:flex;
+      align-items:center;
+      gap:8px;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+    .uDot{
+      width:8px;height:8px;border-radius:50%;
+      background:#42d392;
+      box-shadow:0 0 0 4px rgba(66,211,146,.18);
+      flex:0 0 auto;
+    }
+    .uDot.idle{
+      background:#c7bfb7;
+      box-shadow:0 0 0 4px rgba(199,191,183,.18);
+    }
+    .uName{
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+
 /* Typing indicator */
     .typing{
       display:flex;
@@ -957,7 +1001,16 @@
           </div>
         </div>
       </div>
-    </div>
+    
+        <div class="sideBox">
+          <div class="hd">
+            <span>users</span>
+            <span class="pill" id="userCount">0</span>
+          </div>
+          <ul class="userList" id="userList" aria-label="npc users"></ul>
+        </div>
+
+</div>
   </div>
 
 <script>
@@ -1063,6 +1116,145 @@
   }
 
 
+  // ===== NPC roster (local-only) =====
+  // NPCs appear in the user list and can chatter + reply to each other.
+  const NPC_ROSTER = [
+    { name: "YakultOps",   color: "#e46a5d", state: "online", topics: ["ops","relay","status"] },
+    { name: "ClanLog",     color: "#4080ff", state: "online", topics: ["clan","room","matches"] },
+    { name: "PatchNotes",  color: "#40ff40", state: "idle",   topics: ["patch","version","notes"] },
+    { name: "BlueLink",    color: "#0000ee", state: "online", topics: ["portal","links","ui"] },
+    { name: "RoomTemp",    color: "#ffff40", state: "idle",   topics: ["vibe","quiet","timing"] },
+    { name: "NullPointer", color: "#ff40ff", state: "online", topics: ["bugs","edges","inputs"] },
+    { name: "Archivist",   color: "#aaaaaa", state: "online", topics: ["notes","logs","memory"] },
+  ];
+
+  const NPC_CHANNELS = ["ROOM","CLAN","SYS"];
+
+  // "Gun topics" here = game/chat flavor only (matches/loadouts vibes), no real-world instructions.
+  const TOPIC_LINES = {
+    ops: ["^2ping ok.","^7relay quiet.","^3instance idle.","^7signals stable."],
+    relay: ["^7bus: clear.","^7packets: calm.","^5handoff clean."],
+    status: ["^2online.","^7idle.","^4watching."],
+    clan: ["^7[CLAN] chatter drifting.","^7someone joined the room.","^7someone left a note."],
+    room: ["^7room feels light today.","^7matchmaking: imaginary."],
+    matches: ["^3warmup only.","^7no ranked. just motion."],
+    patch: ["^7notes are incomplete.","^7build feels stable."],
+    version: ["^7v0.0.x energy.","^7shell-first, always."],
+    notes: ["^7log appended.","^7archived locally."],
+    portal: ["^3blue link looks real.","^7click-through confirmed."],
+    links: ["^3external jump armed.","^7confirm modal: expected."],
+    ui: ["^7bevels: correct.","^7angles: business."],
+    vibe: ["^7quiet window.","^7milk-cream palette."],
+    timing: ["^7slow loop. steady hand.","^7no rush."],
+    bugs: ["^6edge case spotted.","^6input sanitized."],
+    edges: ["^6corners squared.","^6borders held."],
+    inputs: ["^6user typed.","^6shell replied."],
+    logs: ["^7remember this frame.","^7the log holds."],
+    memory: ["^7localStorage: faithful.","^7state preserved."],
+  };
+
+  function npcByName(name){
+    return NPC_ROSTER.find(n => n.name === name) || null;
+  }
+  function chance(p){ return Math.random() < p; }
+
+  function renderUserList(){
+    const ul = document.getElementById("userList");
+    const pill = document.getElementById("userCount");
+    if (!ul || !pill) return;
+
+    ul.innerHTML = "";
+    for (const npc of NPC_ROSTER){
+      const li = document.createElement("li");
+      li.className = "userRow";
+
+      const dot = document.createElement("span");
+      dot.className = "uDot" + (npc.state === "idle" ? " idle" : "");
+
+      const name = document.createElement("span");
+      name.className = "uName whoGlow";
+      name.textContent = npc.name;
+      name.style.color = npc.color;
+
+      li.appendChild(dot);
+      li.appendChild(name);
+      ul.appendChild(li);
+    }
+
+    pill.textContent = String(NPC_ROSTER.length);
+  }
+
+  function styleWhoSpan(p, who){
+    const npc = npcByName(who);
+    if (!npc) return;
+    const whoEl = p.querySelector(".who");
+    if (!whoEl) return;
+    whoEl.style.color = npc.color;
+    whoEl.classList.add("whoGlow");
+  }
+
+  let lastNpc = null;
+  let lastTopic = "ops";
+
+  function randomTopicFor(npc){
+    const t = pick(npc.topics);
+    return TOPIC_LINES[t] ? t : "ops";
+  }
+
+  function npcSay(npc, text, channel){
+    const ch = channel || pick(NPC_CHANNELS);
+    showTyping(650 + Math.random()*600);
+    setTimeout(() => {
+      typing.style.display = "none";
+      addLine(npc.name, text, "", ch);
+      const p = log.lastElementChild;
+      if (p) styleWhoSpan(p, npc.name);
+      saveChat();
+    }, 550 + Math.random()*550);
+  }
+
+  function npcChatterTick(){
+    // Don’t start until there is some content
+    const lineCount = log.querySelectorAll(".line").length;
+    if (lineCount < 2) return;
+
+    // Quiet by default
+    if (!chance(0.30)) return;
+
+    // Pick speaker (sometimes respond to lastNpc)
+    let npc = null;
+    if (lastNpc && chance(0.35)){
+      const others = NPC_ROSTER.filter(n => n.name !== lastNpc);
+      npc = pick(others);
+    } else {
+      npc = pick(NPC_ROSTER);
+    }
+
+    // Pick topic (sometimes mirror last topic)
+    const topic = chance(0.45) ? lastTopic : randomTopicFor(npc);
+    const line = pick(TOPIC_LINES[topic] || TOPIC_LINES.ops);
+
+    const replyPrefix = (lastNpc && chance(0.22)) ? `^7@${lastNpc}: ` : "";
+    const chan = (topic === "ops" || topic === "relay" || topic === "status") ? "SYS"
+              : (topic === "clan") ? "CLAN" : "ROOM";
+
+    npcSay(npc, replyPrefix + line, chan);
+
+    lastNpc = npc.name;
+    lastTopic = topic;
+  }
+
+  function npcPresenceTick(){
+    for (const n of NPC_ROSTER){
+      if (Math.random() < 0.15){
+        n.state = (n.state === "online") ? "idle" : "online";
+      }
+    }
+    renderUserList();
+  }
+
+
+
   // MODIFIED addLine to include bot-specific classes for styling
   function addLine(who, msg, cls="", channel=null){
     const p = document.createElement("p");
@@ -1112,7 +1304,8 @@
       log.innerHTML = "";
       for(const it of items){
         addLine(it.who || "?", it.msg || "", it.cls || "", it.channel || null);
-      }
+        { const p = log.lastElementChild; if(p) styleWhoSpan(p, it.who || "?"); }
+}
       return items.length > 0;
     }catch(e){
       return false;
@@ -1340,6 +1533,12 @@
     addLine("You", "^7Click a chip, or type a line.", "sys", "YOU");
     saveChat();
   }
+
+  // ===== NPC panel + ambient chatter =====
+  renderUserList();
+  setInterval(npcPresenceTick, 12000 + Math.floor(Math.random()*6000));
+  setInterval(npcChatterTick, 9000 + Math.floor(Math.random()*7000));
+
   input.focus();
 })();
 </script>
