--- a/WordZ/index.html
+++ b/WordZ/index.html
@@ -896,7 +896,45 @@
     html[data-theme="y2k"]{ --glow: rgba(10,36,106,.35); }
     html[data-theme="punk"]{ --glow: rgba(26,255,0,.35); }
 
-  </style>
+  
+    /* ===== Identity (local-only) ===== */
+    #identBox .pad{ padding:8px 10px; display:flex; flex-direction:column; gap:8px; }
+    #identBox .row{ display:flex; align-items:center; gap:8px; }
+    #identBox .lbl{ width:44px; font-family:var(--mono); font-size:11px; color:var(--muted); }
+    #identBox .inputSm{
+      flex:1;
+      padding:5px 6px;
+      font-family:var(--mono);
+      font-size:12px;
+      border:2px solid;
+      border-color: var(--win-lo) var(--win-hi) var(--win-hi) var(--win-lo);
+      background:#fff;
+      color:var(--text);
+      outline:none;
+    }
+    #identBox .colorPick{
+      width:44px; height:26px;
+      padding:0;
+      border:2px solid;
+      border-color: var(--win-lo) var(--win-hi) var(--win-hi) var(--win-lo);
+      background:#fff;
+    }
+    #identBox .rowBtns{ display:flex; gap:8px; }
+    #identBox .btnSm{
+      padding:5px 10px;
+      border:2px solid;
+      border-color: var(--win-hi) var(--win-lo) var(--win-lo) var(--win-hi);
+      background:var(--win-face);
+      color:var(--win-text);
+      font-weight:bold;
+      cursor:pointer;
+      font-family:var(--ui);
+      font-size:12px;
+    }
+    #identBox .btnSm:active{ border-color: var(--win-lo) var(--win-hi) var(--win-hi) var(--win-lo); }
+    #identBox .hint{ font-family:var(--mono); font-size:11px; color:var(--muted); }
+
+</style>
 </head>
 
 <body>
@@ -952,7 +990,39 @@
 
       <!-- side -->
       <div class="side">
-        <div class="sideBox">
+        
+        <div class="sideBox" id="identBox">
+          <div class="hd">
+            <span>identity</span>
+            <span class="pill" id="tokenPill">tkn: ----</span>
+          </div>
+
+          <div class="pad">
+            <div class="row">
+              <label class="lbl">user</label>
+              <input class="inputSm" id="identUser" placeholder="You" maxlength="18">
+            </div>
+
+            <div class="row">
+              <label class="lbl">key</label>
+              <input class="inputSm" id="identKey" placeholder="••••" type="password" maxlength="32">
+            </div>
+
+            <div class="row">
+              <label class="lbl">color</label>
+              <input class="colorPick" id="identColor" type="color" value="#e46a5d">
+            </div>
+
+            <div class="rowBtns">
+              <button class="btnSm" id="identLogin" type="button">login</button>
+              <button class="btnSm" id="identReset" type="button">reset</button>
+            </div>
+
+            <div class="hint">Local-only. Sets name + glow token.</div>
+          </div>
+        </div>
+
+<div class="sideBox">
           <div class="hd">
             <span>signal</span>
             <span class="pill">soft</span>
@@ -1085,25 +1155,55 @@
     "5": "#40ffff",
     "6": "#ff40ff",
     "7": "#aaaaaa",
+    "9": "#ffffff",
   };
 
+  function updateDefaultGunzColor(){
+    const c = getComputedStyle(document.body).color || "#000000";
+    GUNZ_COLORS["0"] = c;
+    GUNZ_COLORS["9"] = c;
+  }
+
+
+
   function parseGunzColors(text){
+    updateDefaultGunzColor();
     let current = GUNZ_COLORS["0"];
     let out = "";
     const str = String(text ?? "");
+
+    const isWordChar = (c) => /[A-Za-z0-9_]/.test(c);
+
     for (let i = 0; i < str.length; i++){
       if (str[i] === "^" && GUNZ_COLORS[str[i+1]]){
         current = GUNZ_COLORS[str[i+1]];
-        i++; // skip color digit
+        i++;
         continue;
       }
+
+      if (str[i] === "@"){
+        let j = i + 1;
+        while (j < str.length && isWordChar(str[j])) j++;
+        const name = str.slice(i+1, j);
+        const npc = npcByName(name);
+        if (npc){
+          out += `<span class="whoGlow" style="color:${npc.color}">${esc("@"+name)}</span>`;
+          i = j - 1;
+          continue;
+        }
+      }
+
+      out += `<span style="color:${current}">${esc(str[i])}</span>`;
+    }
+    return out;
+  }
       out += `<span style="color:${current}">${esc(str[i])}</span>`;
     }
     return out;
   }
 
   function stripGunzCodes(text){
-    return String(text ?? "").replace(/\^[0-7]/g, "");
+    return String(text ?? "").replace(/\\^[0-79]/g, "");
   }
 
   function inferChannel(who, cls){
@@ -1112,7 +1212,7 @@
     if (w === "system") return "SYS";
     if (w === "you") return "YOU";
     // Default: feels like CLAN/ROOM chatter
-    return "CLAN";
+    return "WrdZ";
   }
 
 
@@ -1128,14 +1228,164 @@
     { name: "Archivist",   color: "#aaaaaa", state: "online", topics: ["notes","logs","memory"] },
   ];
 
-  const NPC_CHANNELS = ["ROOM","CLAN","SYS"];
+  // ===== Identity (local-only): username + key => token + unique glow color =====
+  const IDENT_KEY = "wordz_identity_v1";
+
+  let IDENTITY = {
+    user: "You",
+    color: null,
+    glow: 10,
+    token: "----"
+  };
+
+  // simple stable hash (deterministic; not crypto)
+  function hash32(str){
+    let h = 2166136261;
+    for (let i=0;i<str.length;i++){
+      h ^= str.charCodeAt(i);
+      h = Math.imul(h, 16777619);
+    }
+    return h >>> 0;
+  }
+
+  function rgb2hex(r,g,b){
+    const x = (r<<16) | (g<<8) | b;
+    return "#" + x.toString(16).padStart(6,"0");
+  }
+
+  function usedColorsSet(){
+    const used = new Set();
+    if (typeof NPC_ROSTER !== "undefined" && Array.isArray(NPC_ROSTER)){
+      NPC_ROSTER.forEach(n => used.add(String(n.color || "").toLowerCase()));
+    }
+    // Optional: reserve GunZ palette colors so ^1..^7 remain "special"
+    // if (typeof GUNZ_COLORS !== "undefined") Object.values(GUNZ_COLORS).forEach(c => used.add(String(c).toLowerCase()));
+    return used;
+  }
+
+  function generateUniqueColor(seed){
+    const used = usedColorsSet();
+    const h = hash32(seed);
+    let hue = h % 360;
+
+    for (let tries=0; tries<48; tries++){
+      const s = 0.70, v = 0.95;
+      const c = v*s;
+      const x = c*(1-Math.abs(((hue/60)%2)-1));
+      const m = v-c;
+
+      let r=0,g=0,b=0;
+      if (hue<60){ r=c; g=x; b=0; }
+      else if (hue<120){ r=x; g=c; b=0; }
+      else if (hue<180){ r=0; g=c; b=x; }
+      else if (hue<240){ r=0; g=x; b=c; }
+      else if (hue<300){ r=x; g=0; b=c; }
+      else { r=c; g=0; b=x; }
+
+      const hex = rgb2hex(
+        Math.round((r+m)*255),
+        Math.round((g+m)*255),
+        Math.round((b+m)*255)
+      );
+
+      if (!used.has(hex.toLowerCase())) return hex;
+      hue = (hue + 17) % 360;
+    }
+    return "#e46a5d";
+  }
+
+  function computeGlowFromSeed(seed){
+    const h = hash32(seed);
+    return 6 + (h % 11); // 6..16
+  }
+
+  function applyIdentity(){
+    const pill = document.getElementById("tokenPill");
+    if (pill) pill.textContent = "tkn: " + (IDENTITY.token || "----");
+
+    window.WORDZ_USER_NAME  = IDENTITY.user || "You";
+    window.WORDZ_USER_COLOR = IDENTITY.color || null;
+    window.WORDZ_USER_GLOW  = Number(IDENTITY.glow || 10);
+  }
+
+  function saveIdentity(){
+    try{ localStorage.setItem(IDENT_KEY, JSON.stringify(IDENTITY)); }catch(e){}
+  }
+  function loadIdentity(){
+    try{
+      const raw = localStorage.getItem(IDENT_KEY);
+      if (!raw) return;
+      const obj = JSON.parse(raw);
+      if (obj && typeof obj === "object") IDENTITY = { ...IDENTITY, ...obj };
+    }catch(e){}
+  }
+
+  function setIdentityFromInputs(){
+    const u = document.getElementById("identUser")?.value?.trim() || "You";
+    const k = document.getElementById("identKey")?.value || "";
+    const seed = u + "|" + k;
+
+    const token = (hash32(seed).toString(16).toUpperCase().slice(0,4)).padStart(4,"0");
+    IDENTITY.user  = u;
+    IDENTITY.token = token;
+    IDENTITY.color = generateUniqueColor(seed);
+    IDENTITY.glow  = computeGlowFromSeed(seed);
+
+    const col = document.getElementById("identColor");
+    if (col) col.value = IDENTITY.color;
+
+    applyIdentity();
+    saveIdentity();
+  }
+
+  function wireIdentityUI(){
+    loadIdentity();
+
+    const u = document.getElementById("identUser");
+    const c = document.getElementById("identColor");
+    if (u) u.value = IDENTITY.user || "You";
+    if (c && IDENTITY.color) c.value = IDENTITY.color;
+
+    applyIdentity();
+
+    document.getElementById("identLogin")?.addEventListener("click", () => {
+      setIdentityFromInputs();
+      addLine("System", `^7identity set: ^2${IDENTITY.user} ^7(tkn ^3${IDENTITY.token}^7)`, "sys", "SYS");
+      saveChat();
+    });
+
+    document.getElementById("identReset")?.addEventListener("click", () => {
+      IDENTITY = { user:"You", color:null, glow:10, token:"----" };
+      try{ localStorage.removeItem(IDENT_KEY); }catch(e){}
+      applyIdentity();
+      addLine("System", "^7identity reset.", "sys", "SYS");
+      saveChat();
+    });
+
+    c?.addEventListener("input", () => {
+      const used = usedColorsSet();
+      const val = String(c.value || "").toLowerCase();
+      if (used.has(val)){
+        addLine("System", "^1color collision.^7 pick another.", "sys", "SYS");
+        c.value = IDENTITY.color || "#e46a5d";
+        return;
+      }
+      IDENTITY.color = c.value;
+      applyIdentity();
+      saveIdentity();
+    });
+  }
+
+
+
+  const NPC_CHANNELS = ["ROOM","WrdZ","SYS"];
 
   // "Gun topics" here = game/chat flavor only (matches/loadouts vibes), no real-world instructions.
   const TOPIC_LINES = {
     ops: ["^2ping ok.","^7relay quiet.","^3instance idle.","^7signals stable."],
     relay: ["^7bus: clear.","^7packets: calm.","^5handoff clean."],
     status: ["^2online.","^7idle.","^4watching."],
-    clan: ["^7[CLAN] chatter drifting.","^7someone joined the room.","^7someone left a note."],
+    clan: ["^7[WrdZ] chatter drifting.","^7someone joined the room.","^7someone left a note."],
     room: ["^7room feels light today.","^7matchmaking: imaginary."],
     matches: ["^3warmup only.","^7no ranked. just motion."],
     patch: ["^7notes are incomplete.","^7build feels stable."],
@@ -1154,7 +1404,8 @@
   };
 
   function npcByName(name){
-    return NPC_ROSTER.find(n => n.name === name) || null;
+    const q = String(name || "").toLowerCase();
+    return NPC_ROSTER.find(n => n.name.toLowerCase() === q) || null;
   }
   function chance(p){ return Math.random() < p; }
 
@@ -1210,7 +1461,12 @@
       const p = log.lastElementChild;
       if (p) styleWhoSpan(p, npc.name);
       saveChat();
-    }, 550 + Math.random()*550);
+    
+
+    if (/^\^1de\^2su$/i.test(msg.trim())) {
+      desuChorus();
+    }
+}, 550 + Math.random()*550);
   }
 
   function npcChatterTick(){
@@ -1236,7 +1492,7 @@
 
     const replyPrefix = (lastNpc && chance(0.22)) ? `^7@${lastNpc}: ` : "";
     const chan = (topic === "ops" || topic === "relay" || topic === "status") ? "SYS"
-              : (topic === "clan") ? "CLAN" : "ROOM";
+              : (topic === "clan") ? "WrdZ" : "ROOM";
 
     npcSay(npc, replyPrefix + line, chan);
 
@@ -1385,6 +1641,20 @@
           chosenWho = inputKey.split(":")[0].replace(/_/g, ' ');
           chosenWho = chosenWho.split(' ').map(w => w.charAt(0).toUpperCase() + w.slice(1)).join(' ');
         }
+
+  function desuChorus(){
+    const lines = ["^1de^2su", "^1DE^2SU", "is it ^1de^2su ^9time?"];
+    const speakers = Array.isArray(NPC_ROSTER) ? NPC_ROSTER.slice(0) : [];
+    for (let i = speakers.length - 1; i > 0; i--){
+      const j = Math.floor(Math.random() * (i + 1));
+      [speakers[i], speakers[j]] = [speakers[j], speakers[i]];
+    }
+    const chosen = speakers.slice(0, Math.min(3, speakers.length));
+    chosen.forEach((npc, idx) => {
+      setTimeout(() => npcSay(npc, lines[idx % lines.length], "WrdZ"), 250 + idx * 500);
+    });
+  }
+
       } else {
         responsePool = replies["what is this?"];
         chosenWho = pick(botParticipants);
@@ -1529,7 +1799,7 @@
   const had = loadChat();
   if(!had){
     addLine("System", "^2WordZ shell online.", "sys", "SYS");
-    addLine("WordZ", "^3typing…", "sys", "CLAN");
+    addLine("WordZ", "^3typing…", "sys", "WrdZ");
     addLine("You", "^7Click a chip, or type a line.", "sys", "YOU");
     saveChat();
   }
@@ -1539,7 +1809,9 @@
   setInterval(npcPresenceTick, 12000 + Math.floor(Math.random()*6000));
   setInterval(npcChatterTick, 9000 + Math.floor(Math.random()*7000));
 
-  input.focus();
+  
+  wireIdentityUI();
+input.focus();
 })();
 </script>
 </body>
